--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,4 @@ jobs:
           ACCESS_TOKEN: ${{ secrets.DEPLOY_KEY }}
           BRANCH: gh-pages
           FOLDER: .vuepress/dist
-          BUILD_SCRIPT: npm install && npm run build
+          BUILD_SCRIPT: npm install && npm run docs:build
