--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,9 @@ jobs:
         uses: actions/checkout@main
 
       - name: Build and Deploy
-        uses: JamesIves/github-pages-deploy-action@main
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         env:
           ACCESS_TOKEN: ${{ secrets.DEPLOY_KEY }}
           BRANCH: gh-pages
-          FOLDER: .vuepress/dist
+          FOLDER: docs/.vuepress/dist
           BUILD_SCRIPT: npm install && npm run docs:build
